# nftrout

./: .gitignore  .gitmodules  .prettierrc  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: test.yml
contracts/: .gitmodules  hardhat.config.ts  package.json  remappings.txt  tsconfig.build.json
contracts/.openzeppelin/: unknown-3141.json
contracts/docs/: LilypadCaller.md  NFTMinter.md
contracts/docs/libs/: Errors.md
contracts/src/: LilypadCaller.sol  NFTMinter.sol  index.ts
contracts/src/libs/: Errors.sol
contracts/tasks/: deploy.ts  force-import.ts  pause.ts  transfer-owner.ts  unpause.ts  upgrade.ts  validate-upgrade.ts
contracts/test/: NFTMinter.test.ts
evm/: .gitignore  foundry.toml  hardhat.config.cjs  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
evm/contracts/: NFTrout.sol
evm/contracts/acceptor/: TrustMeBroTaskAcceptor.sol
evm/contracts/lilypad/: LilypadEvents.sol  (+2 more)
evm/deploy/: 01_init_task_acceptor.cjs  01_init_task_acceptor.ts  01_lilypad_events.ts  02_nftrout.cjs  02_nftrout.ts
evm/src/: NFTrout.sol  Scales.sol  index.ts
evm/test/: NFTrout.ts  index.ts
evm/tsconfig/: base.json
frontend/: .env.development  .env.local.example  .env.production  .gitignore  index.html  next.config.js  nftrout-evm.tgz  package.json  plasmic-init.ts  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/components/: claim-all-fractions-button.tsx  config.tsx  connect-wallet.tsx  create-form.tsx  dapp-context.tsx
frontend/lib/: config.ts  formatting.ts  parsing.ts
frontend/src/: App.vue  contracts.ts  main.ts  router.ts  trouts.ts
indexer/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  rust-toolchain.toml
indexer/config/: local.toml
indexer/src/: api.rs  conf.rs  indexer.rs  ipfs.rs  main.rs  nftrout.rs  utils.rs
indexer/src/db/: mod.rs  tests.rs
indexer/src/db/migrations/: 00-init.sql  01-events.sql  01-pending.sql
indexer/src/nftrout/: abi.json  algo.rs  mod.rs  names.rs
job/: .gitignore  Dockerfile  nftrout.js  oasisprotocol-sapphire-paratime-1.0.15.tgz  package.json
job/src/: esm.ts  fishdraw.js  nftrout.ts  utils.ts
worker/: .gitignore  package.json  tsconfig.json
worker/config/: local.json  mainnet.json  testnet.json
worker/src/: crypto.ts  fishdraw.cjs  fishdraw.ts  main.ts  nftrout.ts  spawner.ts
worker/test/: crypto.spec.ts
(+25 files in other folders)
